force-app/main/default/objects/Account/fields/IsA__c.field-meta.xml
<CustomField>
    <fullName>IsA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsA</label>
    <type>Checkbox</type>
</CustomField>