force-app/main/default/objects/Account/fields/IsB__c.field-meta.xml
<CustomField>
    <fullName>IsB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsB</label>
    <type>Checkbox</type>
</CustomField>