force-app/main/default/objects/Account/fields/IsC__c.field-meta.xml
<CustomField>
    <fullName>IsC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsC</label>
    <type>Checkbox</type>
</CustomField>